# cob_object_perception

./: .travis.rosinstall  .travis.rosinstall.kinetic  .travis.yml  README  README.md  rosdep.yaml  stack.xml
cob_datamatrix/: CMakeLists.txt  mainpage.dox  manifest.xml
cob_datamatrix/launch/: datamatrix.launch  datamatrix_test.launch  kinect.launch
cob_datamatrix/nodes/: datamatrix.py  test_trigger.py
cob_datamatrix/srv/: DetectDatamatrix.srv
cob_datamatrix/test/: component_test.xml
cob_fiducials/: CMakeLists.txt  cmake_install.cmake  manifest.xml  package.xml
cob_fiducials/common/include/: PCLVisualization.h  SerializeIO.h
cob_fiducials/common/src/: AbstractFiducialModel.cpp  FiducialMarkerEvaluationToolkit.cpp  FiducialModelPi.cpp  FiducialTestingEnvironment.cpp  PCLVisualization.cpp  SerializeIO.cpp  VoxelMap.cpp
cob_fiducials/msvc/: LibFiducials.sln  LibFiducials.vcxproj  LibFiducials.vcxproj.filters
cob_fiducials/ros/launch/: calibrate_sharpness.launch  fiducialarraydetector.launch  fiducials.launch  fiducials_0.yaml  fiducials_1.yaml  fiducials_bsh.yaml  fiducials_fpitag.yaml  fiducials_seneka.launch  fiducials_seneka.yaml
cob_fiducials/ros/scripts/: fiducials_detector_service_client.py
cob_fiducials/ros/src/: fiducialarraydetector.cpp  fiducials.cpp  fiducialsvalidation.cpp  histogr.cpp  startVoxelMap.cpp
cob_marker/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_marker/cmake/: FindDMTX.cmake
cob_marker/common/src/: MagickBitmapSource.cpp
cob_marker/launch/: marker.launch
cob_marker/ros/launch/: marker.launch
cob_marker/ros/src/: marker_action.cpp  marker_action_client.py
cob_object_categorization/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_object_categorization/common/matlab/: 3dcoordinatePlot.m  CurveFittingPlots.m  PRCurve.m  ROCCurve.m  StatisticsVisualization.m  StatisticsVisualization_IPA2.m  VariableImportance.m  classwisePerformance.m  combo.m  computeMeanVariance.m  confusionMatrix.m  coordinatePlot.m  descriptorRepeatability.m  doublesap.m  lessViews.m  normalizationPlots.m  plotPointcloud.m  scale_invariance.m  sigmoid.m  tilt_invariance.m  timestats.m  variance.m  viewWiseError.m
cob_object_categorization/common/msvc/: ObjectClassifier.9.sln  ObjectClassifier.sln  ObjectClassifier.vcproj  ObjectClassifier.vcxproj  ObjectClassifier.vcxproj.filters
cob_object_categorization/common/src/: AbstractBlobDetector.cpp  BlobFeature.cpp  BlobList.cpp  DetectorCore.cpp  ICP.cpp  JBKUtils.cpp  Math3d.cpp  ObjectClassifier.cpp  ObjectClassifierMain.cpp  OpenCVUtils.cpp  SharedImageJBK.cpp  SharedImageSequence.cpp  ThreeDUtils.cpp  timer.cpp
cob_object_categorization/msg/: PointCloud2Array.msg
cob_object_categorization/ros/launch/: object_categorization.launch  object_categorization.yaml  object_segmentation.launch
cob_object_categorization/ros/src/: object_categorization.cpp  segmentation_node.cpp
cob_object_detection_fake/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
cob_object_detection_fake/ros/launch/: object_detection_fake.launch
cob_object_detection_fake/ros/scripts/: object_detection_fake
cob_object_detection_fake/ros/src/: object_detection_fake.py
cob_object_perception/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_object_recording/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_object_recording/cfg/: ObjectRecording.cfg
cob_object_recording/ros/launch/: object_recording.launch
cob_object_recording/ros/rviz/: object_recording.rviz
cob_object_recording/ros/src/: object_recording.cpp  object_recording_client.cpp
cob_read_text/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_read_text/common/src/: convertXML.cpp  createCorrelation.cpp  read_evaluation.cpp  run_detection.cpp  showPCD.cpp  text_detect.cpp
cob_read_text/launch/: params.yaml  params.yaml.orig  params_bormann.yaml  params_original.yaml  params_original_test.yaml  read_text.launch  read_text_from_bag.launch  read_text_from_camera.launch  read_text_with_eval.launch  read_text_with_eval.launch.orig  read_text_with_eval_bormann.launch  read_text_with_eval_original.launch
cob_read_text/ros/src/: cob_read_text.cpp  labelBox.cpp  read_evaluation.cpp  recordKinPro.cpp
cob_read_text/scripts/: dictionary.py  filelist.py  test.sh
cob_read_text/src/: cob_read_text.cpp
cob_surface_classification/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml  readme.md
cob_surface_classification/cfg/: NormalEstimation.cfg
cob_surface_classification/common/files/: edge_estimation.txt  experiments.xlsx  normal_estimation_cross.txt  normal_estimation_cross_edge.txt  normal_estimation_direct_edge.txt  normal_estimation_integral.txt  normal_estimation_integral_edge.txt  normal_estimation_vanillapcl.txt  timing.txt
cob_surface_classification/common/src/: refine_segmentation.cpp  shot_descriptor.cpp  (+3 more)
cob_surface_classification/msg/: Int32Array.msg  SegmentedPointCloud2.msg
cob_surface_classification/scripts/: sim_robot_config_back.py  sim_robot_config_back_extreme.py  sim_robot_config_home.py
cob_texture_categorization/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
libvlfeat/: CMakeLists.txt  Makefile.tarball  package.xml  vlfeat-0.9.19.tar.gz.md5sum
libvlfeat/cmake/: libvlfeat-extras.cmake.in
libzxing/: CMakeLists.txt  Makefile  Makefile.tarball  mainpage.dox  manifest.xml  package.xml  zxing-2.1.tar.gz.md5sum
libzxing/cmake/: libzxing-extras.cmake.in
read_text/: CMakeLists.txt  mainpage.dox  manifest.xml
read_text/dictionary/: full-dictionary  full-dictionary(copy)  space.py
read_text/fonts/: 0.tiff  1.tiff  2.tiff  3.tiff  4.tiff  5.tiff  6.tiff  7.tiff  8.tiff  9.tiff  A.tiff  B.tiff  C.tiff  D.tiff  E.tiff  F.tiff  G.tiff  H.tiff  I.tiff  J.tiff  K.tiff  L.tiff  M.tiff  N.tiff  O.tiff  P.tiff  Q.tiff  R.tiff  S.tiff  T.tiff  U.tiff  V.tiff  W.tiff  X.tiff  Y.tiff  Z.tiff  a.tiff  b.tiff  c.tiff  correlation.txt  (+23 more)
read_text/scripts/: filelist.py
read_text/src/: run_detection.cpp  text_detect.cpp
(+275 files in other folders)
