<package>
  <name>cob_marker</name>
  <description>

     cob_marker allows to find 6DOF markers of different types, like datamatrix, Qr, natural landmarks, ... 

  </description>
  <author>Joshua Hampp</author>
  <maintainer email="jsf@ipa.fhg.de">Jan Fischer</maintainer>
  <version>0.1.0</version>
  <license>LGPL</license>
  <url>http://ros.org/wiki/cob_marker</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cob_object_detection_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libzxing</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>cob_object_detection_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libzxing</run_depend>

</package>
