<package format="2">
  <name>cob_marker</name>
  <description>

     cob_marker allows to find 6DOF markers of different types, like datamatrix, Qr, natural landmarks, ... 

  </description>

  <author>Joshua Hampp</author>
  <maintainer email="josh@ipa.fhg.de">Joshua Hampp</maintainer>

  <version>0.1.0</version>
  <license>LGPL</license>
  <url>http://ros.org/wiki/cob_marker</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>cob_object_detection_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libdmtx-dev</depend>
  <depend>libmagick</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libzxing</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>

</package>
