<package>
  <name>cob_object_detection_fake</name>
  <version>0.1.0</version>
  <description>

     cob_object_detection_fake

  </description>
  <author>Joshua Hampp</author>
  <maintainer email="jsf@ipa.fhg.de">Jan Fischer</maintainer>
  <license>LGPL</license>
  <url>http://ros.org/wiki/cob_object_detection_fake</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>cob_object_detection_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>cob_object_detection_msgs</run_depend>

</package>
